@@ -2,22 +2,18 @@
 
 ## Setting up your Development Environment
 
-These instructions assume you are using Windows 10. Java is cross-platform and Subspace-Infinity should be able to build and work on any platform, but it has only been developed and tested on Windows 10. Please use the Eclipse IDE. Eclipse provides built-in code formatting and ensures code adheres to coding style guidelines. It also has built-in static code analysis (SCA) to help detect and prevent errors from being introduced into the product.
+These instructions assume you are using Windows 10. Java is cross-platform and Subspace-Infinity should be able to build and work on any platform, but it has only been developed and tested on Windows 10. 
 
-1. Follow the steps in [BUILDING.md](BUILDING.md) to get Chocolatey, git, Open JDK, gradle, and clone and build the code.
-1. Launch [PowerShell](https://docs.microsoft.com/en-us/PowerShell/scripting/windows-PowerShell/install/installing-windows-PowerShell?view=PowerShell-7) as Administrator, or use [Windows Terminal](https://www.microsoft.com/en-us/p/windows-terminal/9n0dx20hk701) run as Administrator.
-1. Install Eclipse: `choco install eclipse-java-oxygen`
-1. Close your Administrator PowerShell and open a new PowerShell session
-1. Launch Eclipse by typing `eclipse` at the PowerShell command prompt
-1. Eclipse will prompt you for a workspace folder, select the workspace folder you created when you followed the build instructions, for example: `C:\workspace\Subspace`
-1. Use the Eclipse Marketplace: `Help->Eclipse Marketplace...` to install `Yaml Editor 1.6.2` and `Checkstyle Plug-in 8.34.0`
-1. Import the Workspace Preferences with `File->Import->General->Preferences`, and select the file `C:\workspace\Subspace\Subspace-Infinity\eclipse\Workspace-Preferences.epf`. Eclipse will suggest you restart, do that.
-1. Import the Subspace-Infinity checkstyle xml via `Window->Preferences->Checkstyle->New`, choose the `Subspace-Infinity\checkstyle.xml` and set the new checkstyle to Default
-1. Import Subspace-Infinity into Eclipse using `File->Import->Gradle->Existing Gradle Project` and select the folder `C:\workspace\Subspace\Subspace-Infinity`
-1. Let Eclipse finish importing and building Subspace-Infinity before proceeding to the next step
-1. If you want to view projects in a hierarchical view instead of flat, select `Window->Show View->Project Explorer`
-1. Select the infinity folder within the Subspace-Infinity project, right click, and select Run As...->Java Application, select the class `infinity.Main` as the class to run, name the run configuration `Subspace-Infinity Main`, and put the following in for the VM Arguments parameter: `-Xmx1024m -Xms512m -XX:MaxDirectMemorySize=1024m --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED`
-1. Click the `Run` button and Subspace-Infinity should launch, with logging appearing in the Eclipse console window
+I am currently using IntelliJ IDEA to develop with the following plugins/extensions:
+1. Google Code Style
+2. SonarLint
+
+If you're looking to contribute and want to get a more thorough understand of the underlying frameworks, here's a small list to go through. Some parts can probably be skipped or skimmed pretty quickly if you're familiar with Java, with game development concept, with scene graphs etc.
+1. [JMonkeyEngine Docs](https://wiki.jmonkeyengine.org/docs/3.4/documentation.html) - Important! The scene graph engine used as client
+2. [SimEthereal](https://github.com/Simsilica/SimEthereal/wiki) - Provides the networking layer, can be skipped
+3. [SiO2](https://github.com/Simsilica/SiO2) - Important! Provides the foundational GameLoop and GameSystemManager
+4. [Zay-ES](http://jmonkeyengine-contributions.github.io/zay-es/) - Important! The Entity System that Subspace Infinity builds on
+5. [Lemur](http://jmonkeyengine-contributions.github.io/Lemur/) - The GUI library
 
 ## Guildelines for Submitting PRs
 
